Add download section for reports and models
Added download section with Investment Memo and Financial Model links.

--- a/index.html
+++ b/index.html
@@ -134,12 +134,20 @@ nav.scrolled{background:rgba(10,12,16,.92);border-bottom:1px solid var(--border)
 .risk-level.low{background:var(--green-dim);color:var(--green)}.risk-level.med{background:rgba(255,209,102,.12);color:var(--gold)}
 footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}footer p{font-size:11px;color:var(--text-muted);line-height:1.8;max-width:900px;margin:0 auto}
 @media(max-width:768px){nav{padding:0 20px}.nav-links{display:none}.hero{padding:120px 20px 60px;min-height:auto}.section{padding:60px 20px}.stats-row{grid-template-columns:repeat(2,1fr)}.overview-grid{grid-template-columns:1fr}.industry-stats{grid-template-columns:1fr}.val-grid{grid-template-columns:1fr}.risk-item{grid-template-columns:1fr}footer{padding:32px 20px}.cursor-glow{display:none}}
+.dl-card{display:flex;align-items:center;gap:20px;background:var(--surface);border:1px solid var(--border);border-radius:8px;padding:28px 32px;text-decoration:none;color:var(--text);transition:transform .4s cubic-bezier(.22,1,.36,1),border-color .4s,box-shadow .4s;position:relative;overflow:hidden;cursor:pointer}
+.dl-card:hover{transform:translateY(-4px);border-color:var(--accent);box-shadow:0 12px 40px rgba(230,57,70,.1)}
+.dl-card::before{content:'';position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--accent),var(--green));transform:scaleX(0);transform-origin:left;transition:transform .5s cubic-bezier(.22,1,.36,1)}.dl-card:hover::before{transform:scaleX(1)}
+.dl-icon{flex-shrink:0;width:48px;height:48px;display:flex;align-items:center;justify-content:center}
+.dl-info{flex:1}.dl-title{font-size:17px;font-weight:700;margin-bottom:6px}.dl-desc{font-size:13px;color:var(--text-dim);line-height:1.6;margin-bottom:8px}
+.dl-meta{font-family:var(--mono);font-size:11px;color:var(--text-muted);letter-spacing:.5px}
+.dl-arrow{font-size:24px;color:var(--text-muted);transition:transform .3s,color .3s}.dl-card:hover .dl-arrow{transform:translateX(4px);color:var(--accent)}
+@media(max-width:768px){.dl-card{flex-direction:column;text-align:center}.dl-arrow{display:none}}
 </style>
 </head>
 <body>
 <div class="scroll-progress" id="scrollProgress"></div>
 <div class="cursor-glow" id="cursorGlow"></div>
-<nav id="mainNav"><div class="nav-left"><div class="nav-ticker">LLY <span>NYSE · $1,037</span></div><div class="nav-links" id="navLinks"><a href="#thesis" data-section="thesis">Thesis</a><a href="#company" data-section="company">Company</a><a href="#industry" data-section="industry">Industry</a><a href="#catalysts" data-section="catalysts">Catalysts</a><a href="#financials" data-section="financials">Financials</a><a href="#valuation" data-section="valuation">Valuation</a><a href="#risks" data-section="risks">Risks</a></div></div><div class="nav-badge">BUY</div></nav>
+<nav id="mainNav"><div class="nav-left"><div class="nav-ticker">LLY <span>NYSE · $1,037</span></div><div class="nav-links" id="navLinks"><a href="#thesis" data-section="thesis">Thesis</a><a href="#company" data-section="company">Company</a><a href="#industry" data-section="industry">Industry</a><a href="#catalysts" data-section="catalysts">Catalysts</a><a href="#financials" data-section="financials">Financials</a><a href="#valuation" data-section="valuation">Valuation</a><a href="#risks" data-section="risks">Risks</a><a href="#downloads" data-section="downloads">Downloads</a></div></div><div class="nav-badge">BUY</div></nav>
 
 <section class="hero"><div class="hero-orb hero-orb-1"></div><div class="hero-orb hero-orb-2"></div><div class="hero-orb hero-orb-3"></div><div class="hero-grid"></div>
 <div class="hero-label hero-reveal">Investment Memo · February 2026</div>
@@ -259,6 +267,39 @@ footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}fo
 <div class="risk-item reveal"><div><div class="risk-title">5. Multiple Compression</div><div class="risk-desc">31x P/E vulnerable in risk-off environment. <strong style="color:var(--text)">Mitigant:</strong> Low beta (0.35); consistent earnings beats; dividend floor (0.7%).</div></div><span class="risk-level low">Low</span></div>
 </div>
 <div class="reveal" style="background:var(--surface);border:1px solid var(--border);border-radius:8px;padding:24px 28px;margin-top:24px"><p style="font-size:14px;color:var(--text-dim);line-height:1.7"><strong style="color:var(--text)">Overall Risk: MEDIUM.</strong> Primary risks (pricing, competition) are known and priced in. Asymmetric upside from catalyst execution (compounder exit $3–5B, Medicare access, orforglipron $10B+ TAM) outweighs headwinds. <strong style="color:var(--green)">Position size: 3–5% of portfolio.</strong></p></div>
+</section>
+
+<div class="section-divider"></div>
+
+<section class="section" id="downloads">
+<div class="section-header"><span class="section-num">08</span><h2 class="section-title">Full Report &amp; Model</h2></div>
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:24px" class="stagger-children">
+
+<a href="LLY_Pitch_Memo.pdf" download class="dl-card reveal" target="_blank">
+<div class="dl-icon">
+<svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--accent)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><polyline points="9 15 12 18 15 15"></polyline></svg>
+</div>
+<div class="dl-info">
+<div class="dl-title">Investment Memo (PDF)</div>
+<div class="dl-desc">Full 2-page pitch memo with thesis, financials, valuation, catalysts, and appendix with quarterly projections</div>
+<div class="dl-meta">PDF · 5 pages · 1.6 MB</div>
+</div>
+<div class="dl-arrow">→</div>
+</a>
+
+<a href="LLY_Financial_Model.xlsx" download class="dl-card reveal" target="_blank">
+<div class="dl-icon">
+<svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--green)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><rect x="8" y="12" width="8" height="6" rx="1"></rect><line x1="10" y1="12" x2="10" y2="18"></line><line x1="14" y1="12" x2="14" y2="18"></line><line x1="8" y1="15" x2="16" y2="15"></line></svg>
+</div>
+<div class="dl-info">
+<div class="dl-title">Financial Model (Excel)</div>
+<div class="dl-desc">Complete 3-statement model with DCF valuation, sensitivity analysis, scenario analysis, and peer comps</div>
+<div class="dl-meta">XLSX · 236 KB</div>
+</div>
+<div class="dl-arrow">→</div>
+</a>
+
+</div>
 </section>
 
 <div class="section-divider"></div>
