Update navigation and resources section in index.html
Removed download links for the Financial Model and added a link to view the full report.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}fo
 <body>
 <div class="scroll-progress" id="scrollProgress"></div>
 <div class="cursor-glow" id="cursorGlow"></div>
-<nav id="mainNav"><div class="nav-left"><div class="nav-ticker">LLY <span>NYSE · $1,037</span></div><div class="nav-links" id="navLinks"><a href="#thesis" data-section="thesis">Thesis</a><a href="#company" data-section="company">Company</a><a href="#industry" data-section="industry">Industry</a><a href="#catalysts" data-section="catalysts">Catalysts</a><a href="#financials" data-section="financials">Financials</a><a href="#valuation" data-section="valuation">Valuation</a><a href="#risks" data-section="risks">Risks</a><a href="#downloads" data-section="downloads">Downloads</a></div></div><div class="nav-badge">BUY</div></nav>
+<nav id="mainNav"><div class="nav-left"><div class="nav-ticker">LLY <span>NYSE · $1,037</span></div><div class="nav-links" id="navLinks"><a href="#thesis" data-section="thesis">Thesis</a><a href="#company" data-section="company">Company</a><a href="#industry" data-section="industry">Industry</a><a href="#catalysts" data-section="catalysts">Catalysts</a><a href="#financials" data-section="financials">Financials</a><a href="#valuation" data-section="valuation">Valuation</a><a href="#risks" data-section="risks">Risks</a></div></div><div class="nav-badge">BUY</div></nav>
 
 <section class="hero"><div class="hero-orb hero-orb-1"></div><div class="hero-orb hero-orb-2"></div><div class="hero-orb hero-orb-3"></div><div class="hero-grid"></div>
 <div class="hero-label hero-reveal">Investment Memo · February 2026</div>
@@ -269,37 +269,19 @@ footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}fo
 <div class="reveal" style="background:var(--surface);border:1px solid var(--border);border-radius:8px;padding:24px 28px;margin-top:24px"><p style="font-size:14px;color:var(--text-dim);line-height:1.7"><strong style="color:var(--text)">Overall Risk: MEDIUM.</strong> Primary risks (pricing, competition) are known and priced in. Asymmetric upside from catalyst execution (compounder exit $3–5B, Medicare access, orforglipron $10B+ TAM) outweighs headwinds. <strong style="color:var(--green)">Position size: 3–5% of portfolio.</strong></p></div>
 </section>
 
+
+
 <div class="section-divider"></div>
 
-<section class="section" id="downloads">
-<div class="section-header"><span class="section-num">08</span><h2 class="section-title">Full Report &amp; Model</h2></div>
-<div style="display:grid;grid-template-columns:1fr 1fr;gap:24px" class="stagger-children">
-
-<a href="LLY_Pitch_Memo.pdf" download class="dl-card reveal" target="_blank">
-<div class="dl-icon">
-<svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--accent)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><polyline points="9 15 12 18 15 15"></polyline></svg>
+<section class="section" id="resources" style="padding:60px 48px;text-align:center">
+<a href="https://github.com/nvhung010606/elilillywebsite" target="_blank" rel="noopener" style="display:inline-flex;align-items:center;gap:12px;background:var(--surface);border:1px solid var(--border);border-radius:8px;padding:20px 36px;text-decoration:none;color:var(--text);transition:transform .3s,border-color .3s,box-shadow .3s">
+<svg width="24" height="24" viewBox="0 0 24 24" fill="var(--text)"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.31 3.435 9.795 8.205 11.385.6.105.825-.255.825-.57 0-.285-.015-1.23-.015-2.235-3.015.555-3.795-.735-4.035-1.41-.135-.345-.72-1.41-1.23-1.695-.42-.225-1.02-.78-.015-.795.945-.015 1.62.87 1.845 1.23 1.08 1.815 2.805 1.305 3.495.99.105-.78.42-1.305.765-1.605-2.67-.3-5.46-1.335-5.46-5.925 0-1.305.465-2.385 1.23-3.225-.12-.3-.54-1.53.12-3.18 0 0 1.005-.315 3.3 1.23.96-.27 1.98-.405 3-.405s2.04.135 3 .405c2.295-1.56 3.3-1.23 3.3-1.23.66 1.65.24 2.88.12 3.18.765.84 1.23 1.905 1.23 3.225 0 4.605-2.805 5.625-5.475 5.925.435.375.81 1.095.81 2.22 0 1.605-.015 2.895-.015 3.3 0 .315.225.69.825.57A12.02 12.02 0 0 0 24 12c0-6.63-5.37-12-12-12z"/></svg>
+<div style="text-align:left">
+<div style="font-size:15px;font-weight:700">View Full Report &amp; Financial Model</div>
+<div style="font-size:12px;color:var(--text-dim);margin-top:2px">Pitch memo (PDF) · 3-statement model (Excel) · Source files</div>
 </div>
-<div class="dl-info">
-<div class="dl-title">Investment Memo (PDF)</div>
-<div class="dl-desc">Full 2-page pitch memo with thesis, financials, valuation, catalysts, and appendix with quarterly projections</div>
-<div class="dl-meta">PDF · 5 pages · 1.6 MB</div>
-</div>
-<div class="dl-arrow">→</div>
+<span style="font-size:20px;color:var(--text-muted);margin-left:8px">→</span>
 </a>
-
-<a href="LLY_Financial_Model.xlsx" download class="dl-card reveal" target="_blank">
-<div class="dl-icon">
-<svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="var(--green)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><rect x="8" y="12" width="8" height="6" rx="1"></rect><line x1="10" y1="12" x2="10" y2="18"></line><line x1="14" y1="12" x2="14" y2="18"></line><line x1="8" y1="15" x2="16" y2="15"></line></svg>
-</div>
-<div class="dl-info">
-<div class="dl-title">Financial Model (Excel)</div>
-<div class="dl-desc">Complete 3-statement model with DCF valuation, sensitivity analysis, scenario analysis, and peer comps</div>
-<div class="dl-meta">XLSX · 236 KB</div>
-</div>
-<div class="dl-arrow">→</div>
-</a>
-
-</div>
 </section>
 
 <div class="section-divider"></div>
