--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 body::before{content:'';position:fixed;inset:0;background-image:url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.03'/%3E%3C/svg%3E");pointer-events:none;z-index:9999}
 ::-webkit-scrollbar{width:6px}::-webkit-scrollbar-track{background:var(--bg)}::-webkit-scrollbar-thumb{background:var(--border);border-radius:3px}
 .scroll-progress{position:fixed;top:0;left:0;height:3px;background:linear-gradient(90deg,var(--accent),var(--gold),var(--green));z-index:10000;width:0}
-.cursor-glow{position:fixed;width:600px;height:600px;border-radius:50%;background:radial-gradient(circle,rgba(230,57,70,.04) 0%,transparent 70%);pointer-events:none;z-index:1;transform:translate(-50%,-50%)}
+#cursor-canvas{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:9998}
 nav{position:fixed;top:0;left:0;right:0;z-index:100;background:rgba(10,12,16,.6);backdrop-filter:blur(24px);border-bottom:1px solid rgba(42,48,64,0);padding:0 48px;height:56px;display:flex;align-items:center;justify-content:space-between;transition:background .4s,border-color .4s,box-shadow .4s}
 nav.scrolled{background:rgba(10,12,16,.92);border-bottom:1px solid var(--border);box-shadow:0 4px 30px rgba(0,0,0,.3)}
 .nav-left{display:flex;align-items:center;gap:24px}.nav-ticker{font-family:var(--mono);font-size:13px;font-weight:500;color:var(--text);letter-spacing:1px}.nav-ticker span{color:var(--text-muted);font-weight:400}
@@ -133,7 +133,7 @@ nav.scrolled{background:rgba(10,12,16,.92);border-bottom:1px solid var(--border)
 .risk-level{font-family:var(--mono);font-size:10px;font-weight:700;letter-spacing:1.5px;text-transform:uppercase;padding:4px 12px;border-radius:3px;white-space:nowrap}
 .risk-level.low{background:var(--green-dim);color:var(--green)}.risk-level.med{background:rgba(255,209,102,.12);color:var(--gold)}
 footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}footer p{font-size:11px;color:var(--text-muted);line-height:1.8;max-width:900px;margin:0 auto}
-@media(max-width:768px){nav{padding:0 20px}.nav-links{display:none}.hero{padding:120px 20px 60px;min-height:auto}.section{padding:60px 20px}.stats-row{grid-template-columns:repeat(2,1fr)}.overview-grid{grid-template-columns:1fr}.industry-stats{grid-template-columns:1fr}.val-grid{grid-template-columns:1fr}.risk-item{grid-template-columns:1fr}footer{padding:32px 20px}.cursor-glow{display:none}}
+@media(max-width:768px){nav{padding:0 20px}.nav-links{display:none}.hero{padding:120px 20px 60px;min-height:auto}.section{padding:60px 20px}.stats-row{grid-template-columns:repeat(2,1fr)}.overview-grid{grid-template-columns:1fr}.industry-stats{grid-template-columns:1fr}.val-grid{grid-template-columns:1fr}.risk-item{grid-template-columns:1fr}footer{padding:32px 20px}#cursor-canvas{display:none}}
 .dl-card{display:flex;align-items:center;gap:20px;background:var(--surface);border:1px solid var(--border);border-radius:8px;padding:28px 32px;text-decoration:none;color:var(--text);transition:transform .4s cubic-bezier(.22,1,.36,1),border-color .4s,box-shadow .4s;position:relative;overflow:hidden;cursor:pointer}
 .dl-card:hover{transform:translateY(-4px);border-color:var(--accent);box-shadow:0 12px 40px rgba(230,57,70,.1)}
 .dl-card::before{content:'';position:absolute;top:0;left:0;right:0;height:2px;background:linear-gradient(90deg,var(--accent),var(--green));transform:scaleX(0);transform-origin:left;transition:transform .5s cubic-bezier(.22,1,.36,1)}.dl-card:hover::before{transform:scaleX(1)}
@@ -146,7 +146,7 @@ footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}fo
 </head>
 <body>
 <div class="scroll-progress" id="scrollProgress"></div>
-<div class="cursor-glow" id="cursorGlow"></div>
+<canvas id="cursor-canvas"></canvas>
 <nav id="mainNav"><div class="nav-left"><div class="nav-ticker">LLY <span>NYSE · $1,037</span></div><div class="nav-links" id="navLinks"><a href="#thesis" data-section="thesis">Thesis</a><a href="#company" data-section="company">Company</a><a href="#industry" data-section="industry">Industry</a><a href="#catalysts" data-section="catalysts">Catalysts</a><a href="#financials" data-section="financials">Financials</a><a href="#valuation" data-section="valuation">Valuation</a><a href="#risks" data-section="risks">Risks</a></div></div><div class="nav-badge">BUY</div></nav>
 
 <section class="hero"><div class="hero-orb hero-orb-1"></div><div class="hero-orb hero-orb-2"></div><div class="hero-orb hero-orb-3"></div><div class="hero-grid"></div>
@@ -291,9 +291,51 @@ footer{border-top:1px solid var(--border);padding:32px 48px;text-align:center}fo
 const progressBar=document.getElementById('scrollProgress');
 window.addEventListener('scroll',()=>{const w=document.documentElement.scrollTop,h=document.documentElement.scrollHeight-document.documentElement.clientHeight;progressBar.style.width=(w/h*100)+'%'},{passive:true});
 
-const glow=document.getElementById('cursorGlow');let mX=0,mY=0,gX=0,gY=0;
+// === CURSOR GLOW + SHORT TRAIL ===
+const cvs=document.getElementById('cursor-canvas'),ctx=cvs.getContext('2d');
+let W,H,mX=-200,mY=-200;
+function resize(){W=cvs.width=window.innerWidth;H=cvs.height=window.innerHeight}
+resize();window.addEventListener('resize',resize);
 document.addEventListener('mousemove',e=>{mX=e.clientX;mY=e.clientY});
-(function aG(){gX+=(mX-gX)*.08;gY+=(mY-gY)*.08;glow.style.left=gX+'px';glow.style.top=gY+'px';requestAnimationFrame(aG)})();
+document.addEventListener('mouseleave',()=>{mX=-200;mY=-200});
+
+const trail=[];for(let i=0;i<12;i++)trail.push({x:-200,y:-200});
+
+(function animate(){
+  ctx.clearRect(0,0,W,H);
+
+  // Update trail positions with easing
+  trail[0].x+=(mX-trail[0].x)*0.25;
+  trail[0].y+=(mY-trail[0].y)*0.25;
+  for(let i=1;i<trail.length;i++){
+    trail[i].x+=(trail[i-1].x-trail[i].x)*(0.22-i*0.012);
+    trail[i].y+=(trail[i-1].y-trail[i].y)*(0.22-i*0.012);
+  }
+
+  if(mX>0){
+    // Ambient glow
+    const grd=ctx.createRadialGradient(trail[0].x,trail[0].y,0,trail[0].x,trail[0].y,180);
+    grd.addColorStop(0,'rgba(230,57,70,0.07)');
+    grd.addColorStop(0.5,'rgba(230,57,70,0.025)');
+    grd.addColorStop(1,'transparent');
+    ctx.beginPath();ctx.arc(trail[0].x,trail[0].y,180,0,Math.PI*2);ctx.fillStyle=grd;ctx.fill();
+
+    // Smooth trail line
+    ctx.beginPath();ctx.moveTo(trail[0].x,trail[0].y);
+    for(let i=1;i<trail.length-1;i++){
+      const xc=(trail[i].x+trail[i+1].x)/2;
+      const yc=(trail[i].y+trail[i+1].y)/2;
+      ctx.quadraticCurveTo(trail[i].x,trail[i].y,xc,yc);
+    }
+    ctx.strokeStyle='rgba(230,57,70,0.12)';ctx.lineWidth=2;ctx.lineCap='round';ctx.stroke();
+
+    // Small bright dot
+    ctx.beginPath();ctx.arc(trail[0].x,trail[0].y,3,0,Math.PI*2);
+    ctx.fillStyle='rgba(230,57,70,0.45)';ctx.fill();
+  }
+
+  requestAnimationFrame(animate);
+})();
 
 const nav=document.getElementById('mainNav');
 window.addEventListener('scroll',()=>{nav.classList.toggle('scrolled',window.scrollY>80)},{passive:true});
